# MixQ_Tensorrt_LLM

./: .gitignore  .tmux.conf  CMakeLists.txt  MixQPlugins.cpp  README.md  TsinghuaMixQPlugin.cpp  TsinghuaMixQPlugin.h  backbuild.py  build.py  commix.sh  diff_files.py  fp16.sh  fp16_mpi.sh  fp16_qwen.sh  fp16_qwen_mpi.sh  load.sh  mix.sh  mix_qwen_mpi.sh  model.cache  out.txt  plugin.py  quant.sh  quantize.py  quantize_qwen.py  quantweight.sh  revised_history.md  run.py  run.sh  setupvpn.sh  sshd_config  summarize.py  test.py  utils.py
AutoAWQ/: .gitignore  benchall.sh  benchflops.py  benchflops.sh  benchmark.py  benchopt.sh  benchplexity.sh  demoawq.ipynb  evalppl.py  helloworld.cu  runfloat.sh  setup.py
AutoAWQ/examples/: basic_quant.py  basic_quant_mix.py  eval.py
MixQ/: .gitignore  README.md
MixQ/src/: .gitignore  benchflops.py  benchlatency.py  benchppl.py  benchppl.sh  evalppl.py  export.sh  exportmodel.py  get_act.sh  mmlu.sh  onnx_load.py  path.sh  quant.sh  runawq.sh  runfloat.sh  runlatency.sh  runpplall.sh  runthroughput.sh  test.py
act_scales/: Llama-2-1b.pt
autocodegen/plugin_autogen/: README copy.md  README.md  build_engine.py  functional.py  run_engine.py
kernel/: .gitignore  CMakeLists.txt  i8gemm.cu  int8FusedDequantizeCUDA.h
kernel/symmetric/epilogue/thread/: linear_combination_dequant.h
kernel/symmetric/gemm/device/: gemm_dequantsilu.h
modelopt/: __init__.py
modelopt/deploy/: __init__.py
modelopt/onnx/: __init__.py  op_types.py  utils.py
modelopt/torch/: __init__.py
quantkernel/: setup.py
quantkernel/common/: cuda_timer.h  ptx.h  tester.h  util.h
quantkernel/mix_cuda/: cult.cu  cutlassmix.cu  (+4 more)
rouge_score/: __init__.py  create_pyrouge_files.py  io.py  io_test.py  rouge.py  rouge_scorer.py  rouge_scorer_test.py  scoring.py  scoring_test.py  test_util.py  tokenize.py  tokenize_test.py  tokenizers.py  tokenizers_test.py
tensorrt_llm/: .gitignore
weightonlykernel/: CMakeLists.txt  eetpy.cpp  fpA_intB_gemm_wrapper.cu  fpA_intB_gemm_wrapper.h
weightonlykernel/cutlass_kernels/: CMakeLists.txt  cutlass_preprocessors.cc
(+239 files in other folders)
